_scss/_component.contact.scss
#contact-form {
    margin-top: 20px;

    lable {
        padding-top: 15px;
    }

    input {
        margin-top:8px;
    }

    textarea {
        resize: none;
    }

    p {
        margin: 40px 0 140px 0;
    }

    .btn {
        display: block;
        margin: 10px auto;
    }
}

